--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
         
         <div class="container">
             <div class="display_handler">
-            <input type="text" class="input_box">
-            <input type="text" class="output_box">
+            <input type="text" id ="input_num"class="input_box" readonly>
+            <div id = "output_num" class ="output_box"></div>
             </div>
             <div class="buttons">
-                <button class="num" value="1">1</button>
-                <button class="num" value="2">2</button>
-                <button class="num" value="3">3</button>
-                <button class="op" value="+">+</button>
-                <button class="num" value="4">4</button>
-                <button class="num" value="5">5</button>
-                <button class="num"value="6">6</button>
-                <button class="op" value="-">-</button>
-                <button class="num" value="7">7</button>
-                <button class="num" value="8">8</button>
-                <button class="num" value="9">9</button>
-                <button class="op" value="*">*</button>
-                <button class="op" value="/">/</button>
-                <button class="num" value="0">0</button>
-                <button class="ans" value="=">=</button>
+                <button class="num" onclick="append_disp('1')" value="1">1</button>
+                <button class="num" onclick="append_disp('2')" value="2">2</button>
+                <button class="num" onclick="append_disp('3')" value="3">3</button>
+                <button class="op"  onclick="append_disp('+')"value="+">+</button>
+                <button class="num" onclick="append_disp('4')"value="4">4</button>
+                <button class="num" onclick="append_disp('5')"  value="5">5</button>
+                <button class="num"onclick="append_disp('6')" value="6">6</button>
+                <button class="op" onclick="append_disp('-')" value="-">-</button>
+                <button class="num" onclick="append_disp('7')" value="7">7</button>
+                <button class="num" onclick="append_disp('8')" value="8">8</button>
+                <button class="num" onclick="append_disp('9')" value="9">9</button>
+                <button class="op" onclick="append_disp('*')"value="*">*</button>
+                <button class="num" onclick="append_disp('.')" value=".">.</button>
+                <button class="num" onclick="append_disp('0')" value="0">0</button>
+                <button onclick="document.getElementById('input_num').value = ''" class="clear">C</button>
+                <button class="op" onclick="append_disp('/')" value="/">/</button>
+                <button class="clear" onclick="backspace()">B</button>
+                <button class="ans" onclick="calculate()" value="=">=</button>
                 
 
             </div>
